--- a/cv_content.html
+++ b/cv_content.html
@@ -52,13 +52,13 @@
                 </div>
                 <div id="collapse2" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="cv_blog/0001_GAN.html">GAN：最初的生成对抗模型</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">CycleGAN（+源码分析）：加入循环一致性的GAN</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0004_StarGAN.html">StarGAN（+源码分析）：CycleGAN扩展到多域迁移</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0005_UGATIT.html">UGATIT：使用注意力机制生成二次元头像</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0006_AttentionGAN.html">AttentionGAN：一种加入注意力机制的思路</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0007_ShapeMatchingGAN.html">ShapeMatchingGAN：使用GAN生成艺术字体</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0009_GANDissection.html">GANDissection：GAN的可视化技术</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0001_GAN.html">NIPS14-GAN：最yolo初的生成对抗模型</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">ICCV17-CycleGAN（+源码分析）：加入循环一致性的GAN</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0004_StarGAN.html">CVPR18-StarGAN（+源码分析）：CycleGAN扩展到多域迁移</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0005_UGATIT.html">ICLR20-UGATIT：使用注意力机制生成二次元头像</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0006_AttentionGAN.html">arXiv-AttentionGAN：一种加入注意力机制的思路</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0007_ShapeMatchingGAN.html">ICCV19-ShapeMatchingGAN：使用GAN生成艺术字体</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0009_GANDissection.html">ICLR19-GANDissection：GAN的可视化技术</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
@@ -74,7 +74,7 @@
                 </div>
                 <div id="collapse4" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="#">SSD</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0010_Yolo系列.html">CVPR1617-Yolo系列算法</a></li>
                     </ul>
                 </div>
             </div>
