--- a/blog_model.html
+++ b/blog_model.html
@@ -38,6 +38,7 @@
                 <h4>联系我</h4>
                 <p>1025723614@qq.com</p>
             </div>
+        </div>
     </div>
 </body>
 </html>
