--- a/code_blog/0002_凸包01.html
+++ b/code_blog/0002_凸包01.html
@@ -64,7 +64,7 @@
                     <br><br>
                     接下来从<b>极边</b>入手。注意到所有点都在极边的同侧，因此<b>算法三</b>可以轻易的想到：初始设置所有边都不是极边，枚举所有边，遍历所有点，如果所有点都在极边的一侧，则标记其为极边。<b>遍历所有边复杂度为\(o(n^2)\)，内层循环需要做\(o(n)\)次ToLeft测试。因此算法三总时间复杂度为\(o(n^3)\)</b>。
                     <br><br>
-                    这个复杂度仍然是不能被接受的，于是提出了更聪明的<b>算法四：Jarvis March算法</b>。首先使用上文提到的投影性质，会发现\(n\)个点中，<b>纵坐标最小的一堆点中最靠左的那个一定是极点</b>，例如\(H\)点，这一步操作叫做\(LowestThenLeft\)。找到\(H\)点后，其实是可以直接使用\(o(n)\)复杂度找到下一个极点的。以\(H\)点为原点，找最左边的点，这一步称为<b>极角排序</b>：
+                    这个复杂度仍然是不能被接受的，于是提出了更聪明的<b>算法四：Jarvis March算法</b>。首先使用上文提到的投影性质，会发现\(n\)个点中，<b>纵坐标最小的一堆点中最靠左的那个一定是极点</b>，例如\(H\)点，这一步操作叫做\(LowestThenLeftmost\)。找到\(H\)点后，其实是可以直接使用\(o(n)\)复杂度找到下一个极点的。以\(H\)点为原点，找最左边的点，这一步称为<b>极角排序</b>：
                     <p class="text-center"><img src='raw/0002_5.png' width="400"></p>
                     如果按照字典序寻找，具体过程为：连接\(HA\)；\(B\)位于\(HA\)右边，跳过；\(C\)位于\(HA\)右边，跳过；...；\(I\)位于\(HA\)右边，跳过；\(J\)位于\(HA\)左边，连\(HJ\)；\(K\)位于\(HJ\)右边，跳过。因此\(H\)的下一个极点是\(J\)，以此类推，<b>直到出现一个点，它的下一个极点是\(H\)（起点）时，就找遍了所有的极点了。</b>容易验证算法四的复杂度为\(o(cn)\)，其中\(c\)为凸包的极点个数。
                     <br><br>
@@ -82,6 +82,7 @@
                 <h4>联系我</h4>
                 <p>1025723614@qq.com</p>
             </div>
+        </div>
     </div>
 </body>
 </html>
