--- a/cv_content.html
+++ b/cv_content.html
@@ -57,9 +57,10 @@
                         <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">ICCV17-CycleGAN（+源码分析）：加入循环一致性的GAN</a></li>
                         <li class="list-group-item"><a href="cv_blog/0004_StarGAN.html">CVPR18-StarGAN（+源码分析）：CycleGAN扩展到多域迁移</a></li>
                         <li class="list-group-item"><a href="cv_blog/0005_UGATIT.html">ICLR20-UGATIT：使用注意力机制生成二次元头像</a></li>
-                        <li class="list-group-item"><a href="cv_blog/0006_AttentionGAN.html">arXiv-AttentionGAN：一种加入注意力机制的思路</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0006_AttentionGAN.html">arXiv19-AttentionGAN：一种加入注意力机制的思路</a></li>
                         <li class="list-group-item"><a href="cv_blog/0007_ShapeMatchingGAN.html">ICCV19-ShapeMatchingGAN：使用GAN生成艺术字体</a></li>
                         <li class="list-group-item"><a href="cv_blog/0009_GANDissection.html">ICLR19-GANDissection：GAN的可视化技术</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0012_StarGANv2.html">arXiv19-StarGANv2：latent code+条件GAN</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
