--- a/cv_content.html
+++ b/cv_content.html
@@ -53,7 +53,7 @@
                 </div>
                 <div id="collapse2" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="cv_blog/0001_GAN.html">NIPS14-GAN：最yolo初的生成对抗模型</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0001_GAN.html">NIPS14-GAN：最初的生成对抗模型</a></li>
                         <li class="list-group-item"><a href="cv_blog/0003_CycleGAN.html">ICCV17-CycleGAN：加入循环一致性的GAN</a></li>
                         <li class="list-group-item"><a href="cv_blog/0004_StarGAN.html">CVPR18-StarGAN：CycleGAN扩展到多域迁移</a></li>
                         <li class="list-group-item"><a href="cv_blog/0005_UGATIT.html">ICLR20-UGATIT：使用注意力机制生成二次元头像</a></li>
@@ -62,6 +62,7 @@
                         <li class="list-group-item"><a href="cv_blog/0009_GANDissection.html">ICLR19-GANDissection：GAN的可视化技术</a></li>
                         <li class="list-group-item"><a href="cv_blog/0012_StarGANv2.html">arXiv19-StarGANv2：latent code+条件GAN</a></li>
                         <li class="list-group-item"><a href="cv_blog/0013_PGGAN.html">ICLR18-PGGAN：渐进式训练，StyleGAN前作</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0014_StyleGAN.html">CVPR19-StyleGAN：GAN 2.0</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
