--- a/cv_content.html
+++ b/cv_content.html
@@ -63,6 +63,7 @@
                         <li class="list-group-item"><a href="cv_blog/0012_StarGANv2.html">arXiv19-StarGANv2：latent code+条件GAN</a></li>
                         <li class="list-group-item"><a href="cv_blog/0013_PGGAN.html">ICLR18-PGGAN：渐进式训练，StyleGAN前作</a></li>
                         <li class="list-group-item"><a href="cv_blog/0014_StyleGAN.html">CVPR19-StyleGAN：GAN 2.0</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0015_Image2StyleGAN.html">ICCV19-Image2StyleGAN：获取任意图片的latent code</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
