--- a/cv_blog/0012_StarGANv2.html
+++ b/cv_blog/0012_StarGANv2.html
@@ -33,10 +33,10 @@
                 </p>
                 <h2>Method</h2>
                 <p>
-                    回想一下\(StyleGANv1\)是怎么在生成器中指导目标域的，它其实是直接在\(3*256*256\)的输入图像后直接拼接一个\(domain~mask\)，使输入变成\(8*256*256\)。训练的时候，是随机挑选一个\(domain~label\)做图像翻译，计算损失。<br><br>
-                    \(StyleGANv2\)与\(StyleGANv1\)的不同之处在于，<b>\(domain~mask\)不再是一个认为指定的\(256*256\)的全是1的矩阵，而是通过神经网络生成\(style~code\)</b>。\(StyleGANv2\)可以完成两个任务，第一个是\(domain\)指导的图像翻译（这一点v1也能够完成，不过多样性差点）；第二个则是\(image\)指导的图像翻译，这是一个新功能，效果见下图：
+                    回想一下\(StyleGANv1\)是怎么在生成器中指导目标域的，它其实是在\(3*256*256\)的输入图像后直接拼接一个\(domain~mask\)，使输入变成\(8*256*256\)。训练的时候，是随机挑选一个\(domain~label\)做图像翻译，计算损失。<br><br>
+                    \(StyleGANv2\)与\(StyleGANv1\)的不同之处在于，<b>\(domain~mask\)不再是一个人为指定的\(256*256\)的全是1的矩阵，而是通过神经网络生成\(style~code\)</b>。\(StyleGANv2\)可以完成两个任务，第一个是\(domain\)指导的图像翻译（这一点v1也能够完成，不过多样性差点）；第二个则是\(image\)指导的图像翻译，这是一个新功能，效果见下图：
                     <p class="text-center"><img src='raw/0012_1.png' width="600"></p>
-                    整个模型分为生成器，映射网络，编码器，判别器。生成器接受原图像与\(style~code\)，类似于v1；判别器其实最后再做\(N_{domain}\)个二分类任务，与v1相同，这是因为\(celebA\)数据集不是\(one-hot\)的；<b>映射网络是为了完成\(domain\)指导的图像翻译</b>，是一个\(MLP\)结构，用来将随机的\(latent~code\)转换为各个域的\(style~code\)；<b>编码器是为了完成\(image\)指导的图像翻译</b>，是一个卷积神经网络，能够将图片转换为各个域的\(style~code\)。在论文中，作者设置\(latent~code\)为一个长度为16的行向量，在推理时就是一个随机噪声；\(style~code\)是一个长度为64的行向量，因此映射网络与编码器的输出维度都是\([N_{domain},64]\)。
+                    整个模型分为生成器，映射网络，编码器，判别器。生成器接受原图像与\(style~code\)，类似于v1；判别器其实是在做\(N_{domain}\)个二分类任务，与v1相同，这是因为\(celebA\)数据集不是\(one-hot\)的；<b>映射网络是为了完成\(domain\)指导的图像翻译</b>，是一个\(MLP\)结构，用来将随机的\(latent~code\)转换为各个域的\(style~code\)；<b>编码器是为了完成\(image\)指导的图像翻译</b>，是一个卷积神经网络，能够将图片转换为各个域的\(style~code\)。在论文中，作者设置\(latent~code\)为一个长度为16的行向量，在推理时就是一个随机噪声；\(style~code\)是一个长度为64的行向量，因此映射网络与编码器的输出维度都是\([N_{domain},64]\)。
                     <p class="text-center"><img src='raw/0012_2.png' width="750"></p>
                     在训练时，<b>生成器的\(style~code\)都是由映射网络\(F\)产生的</b>；只有在\(image\)指导的推理时才用到编码器产生的\(style~code\)。对抗性损失如下，其中\(s=F_y(z)\)，\(z\)为随机噪声，其实就是\(latent~code\)：
                     <p class="text-center"><img src='raw/0012_3.png' width="300"></p>
