--- a/cv_content.html
+++ b/cv_content.html
@@ -46,6 +46,7 @@
                         <li class="list-group-item"><a href="cv_blog/0002_交叉熵.html">交叉熵</a></li>
                         <li class="list-group-item"><a href="cv_blog/0008_Pytorch操作查询.html">Pytorch基础操作</a></li>
                         <li class="list-group-item"><a href="cv_blog/0011_GAN训练技巧.html">训练GAN的10个技巧</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0016_生成图像质量评估.html">GAN生成图像质量评估方法</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
