--- a/math_content.html
+++ b/math_content.html
@@ -38,11 +38,12 @@
                     </ul>
                 </div>
                 <div class="card-header">
-                    <a class="card-link" data-toggle="collapse" href="#collapse2"></a>
+                    <a class="card-link" data-toggle="collapse" href="#collapse2">从高数到数学分析</a>
                 </div>
                 <div id="collapse2" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="#"></a></li>
+                        <li class="list-group-item"><a href="math_blog/0002_实数系连续.html">实数系连续性的等价表述</a></li>
+                        <li class="list-group-item"><a href="math_blog/0003_重要极限.html">无理数e，欧拉常数c与斯特林公式</a></li>
                     </ul>
                 </div>
             </div>
