--- a/code_content.html
+++ b/code_content.html
@@ -39,6 +39,7 @@
                     <ul class="list-group">
                         <li class="list-group-item"><a href="code_blog/0002_凸包01.html">凸包01：计算几何基础</a></li>
                         <li class="list-group-item"><a href="code_blog/0003_凸包02.html">凸包02：凸包进阶算法</a></li>
+                        <li class="list-group-item"><a href="code_blog/0004_多边形三角剖分.html">三角剖分01：对多边形的三角剖分</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
