--- a/math_content.html
+++ b/math_content.html
@@ -44,6 +44,7 @@
                     <ul class="list-group">
                         <li class="list-group-item"><a href="math_blog/0002_实数系连续.html">实数系连续性的等价表述</a></li>
                         <li class="list-group-item"><a href="math_blog/0003_重要极限.html">无理数e，欧拉常数c与斯特林公式</a></li>
+                        <li class="list-group-item"><a href="math_blog/0004_可积性.html">黎曼可积的等价表述
                     </ul>
                 </div>
             </div>
