--- a/math_content.html
+++ b/math_content.html
@@ -34,7 +34,8 @@
                 </div>
                 <div id="collapse1" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
-                        <li class="list-group-item"><a href="math_blog/0001_信息熵.html">信息熵</a></li>
+                        <li class="list-group-item"><a href="math_blog/0001_信息熵.html">信息熵01：信息量化</a></li>
+                        <li class="list-group-item"><a href="math_blog/0005_信息熵2.html">信息熵02：联合熵，条件熵与共识</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
