--- a/math_content.html
+++ b/math_content.html
@@ -36,6 +36,8 @@
                     <ul class="list-group">
                         <li class="list-group-item"><a href="math_blog/0001_信息熵.html">信息熵01：信息量化</a></li>
                         <li class="list-group-item"><a href="math_blog/0005_信息熵2.html">信息熵02：联合熵，条件熵与共识</a></li>
+                        <li class="list-group-item"><a href="math_blog/0006_信息熵3.html">信息熵03：熵的基本性质</a></li>
+                        <li class="list-group-item"><a href="math_blog/0007_kl散度.html">KL散度与分布的距离</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
