--- a/math_blog/0006_信息熵3.html
+++ b/math_blog/0006_信息熵3.html
@@ -84,6 +84,27 @@
                         <li>
                             \(H(Y|X)=0\)当且仅当\(Y\)是关于\(X\)的函数。<b>给定一个\(X\)就可以确定一个\(Y\)，说明知道了\(X\)后，\(Y\)就没有不确定性了。</b>
                         </li>
+                        <li>
+                            \(H(X)\leq \log |X|\)，<b>当随机变量为均匀分布时信息熵最大</b>。
+                        </li>
+                        <li>
+                            \(Fano\)不等式：\(H(X|X')\leq h_b(P_e)+P_e\log(|X|-1)\)，其中\(X'\)是\(X\)的一个估计，\(P_e\)代表这个估计的误差率，即\(P_e=P_r\{X\not=X'\}\)。\(Fano\)不等式告诉我们，<b>如果\(X'\)是\(X\)的一个很好的估计，那么误差率很低，这样导致不等式右边的项很小。此时如果知道了\(X'\)，\(X\)的不确定性就很小了</b>。
+                        </li>
+                    </ol>
+                    <img src="raw/分割线_兔子.jpg" width="750">
+                    <br><br>
+
+                    <h2>Entropy Rate</h2>
+                    <ol>
+                        <li>
+                            定义\(H_X=\lim\limits_{n\rightarrow \infty}\frac{H(X_1,X_2,...,X_n)}{n}\)为\(Entropy~Rate\)，它可能存在也可能不存在。如果随机变量列\(X_k\)是独立同分布的，那么显然有\(H_X=H(X_k)\)。
+                        </li>
+                        <li>
+                            稳定的信息流：如果对任意的\(m,l\)，都有\(H(X_1,...,X_m)=H(X_{1+l},...,X_{m+l})\)，则称随机变量列是稳定的。
+                        </li>
+                        <li>
+                            对于稳定的信息流，构造\(H_{X'}=\lim\limits_{n\rightarrow \infty}H(X_n|X_{n-1},...,X_1)\)，\(H_{X'}\)与\(H_X\)的极限存在且相等。
+                        </li>
                     </ol>
 
                     <img src='raw/分割线_蜡笔.jpg' width="750">
