--- a/blog_model.html
+++ b/blog_model.html
@@ -12,7 +12,12 @@
     <!-- Bootstrap core js -->
     <script src="../jquery-3.4.1.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
+    <!-- 数学公式 -->
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <!-- 代码高亮 -->
+    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">  
+    <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>  
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm bg-dark">
