感知机损失

--- a/cv_content.html
+++ b/cv_content.html
@@ -48,6 +48,7 @@
                         <li class="list-group-item"><a href="cv_blog/0011_GAN训练技巧.html">训练GAN的10个技巧</a></li>
                         <li class="list-group-item"><a href="cv_blog/0016_生成图像质量评估.html">GAN生成图像质量评估方法</a></li>
                         <li class="list-group-item"><a href="cv_blog/0017_GAN的损失函数.html">GAN的损失函数总结</a></li>
+                        <li class="list-group-item"><a href="cv_blog/0018_感知机损失.html">感知机损失</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
