--- a/code_content.html
+++ b/code_content.html
@@ -30,6 +30,7 @@
                 <div id="collapse1" class="collapse" data-parent="#accordion">
                     <ul class="list-group">
                         <li class="list-group-item"><a href="code_blog/0001_下一个排列.html">o(n)复杂度求下一个排列</a></li>
+                        <li class="list-group-item"><a href="code_blog/0005_Steiner树.html">求解Steiner树的一个启发式算法</a></li>
                     </ul>
                 </div>
                 <div class="card-header">
