--- a/code_blog/0005_Steiner树.html
+++ b/code_blog/0005_Steiner树.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="blog-header">
             <h1 class="blog-title">求解Steiner树的一个启发式算法</h1>
-            <p class="lead blog-description">组合数学课的作业....学号1120181649</p>
+            <p class="lead blog-description">组合数学课的作业......学号1120181649</p>
         </div>
         
         <div class="row">
